# tienda-ficticia

./: .gitignore  .gitkeep  CMakeLists.txt  main.cpp
.cache/clangd/index/: client.cpp.A5CED0D492FBBB61.idx  client.h.C9681495E4F62801.idx  db_enum_aliases.h.2A1476F79DCE51A8.idx  game.cpp.F51CA814AD9606EC.idx  game.h.157C2D48EE5DA2EC.idx  json.hpp.19AD6E8BE13E5960.idx  json_db_utils.h.7B2674C4D390BEC5.idx  main.cpp.85F7120396B7F3FA.idx  movie.cpp.789F7AA124C1BC08.idx  movie.h.B09465C2410F7C59.idx  product.cpp.E1BC49A8D71DF082.idx  products.h.B9889D0809591B52.idx  store.cpp.EA79A5429CC1522E.idx  transaction.cpp.1629C4B8A672728D.idx
db_utils/: db_enum_aliases.h  json_db_utils.cpp  json_db_utils.h
headers/: client.h  products.h  transaction.h
headers/products/: game.h  movie.h  products.h
source/: client.cpp  transaction.cpp
source/products/: game.cpp  movie.cpp  product.cpp
utils/: create_id.h
